# osai

./: .gitignore
2/: active-fingerprinting.sh  active-service-discovery.sh  apilist.txt  git-repos.sh  hosts.sh  openapi.yaml  prompts-rag.yaml  prompts-siem.yaml  prompts.yaml  prompts.yaml.bak  scan-2.3.1.sh  scan-2.3.2.sh  scan-2.3.3.sh
3/: 8004.openapi.json  answer  exercise-3.1.5.1.sh  hosts.py  hosts.sh  hosts.xml  prompts
3/fast-api-client/: article.html  clean.html  cloud_spend.txt  credential_harvest.sql  inject.txt  main.py  naive.html  payload_config_loader.py  pyproject.toml  run_demo.py  sales_report.txt  template_guide.txt
3/fast-api-client/fast_api_client/api/default/: browse_browse_post.py  chat_chat_post.py  chat_ui_get.py  debug_query_debug_query_get.py  debug_schema_debug_db_schema_get.py  health_health_get.py  kb_add_kb_add_post.py  kb_search_endpoint_kb_search_get.py  kb_topics_kb_topics_get.py  last_tool_call_logs_last_tool_call_get.py  logs_latest_logs_latest_get.py  new_session_session_new_post.py  reset_reset_post.py  review_review_post.py  summarize_docs_summarize_post.py  upload_upload_post.py
3/fast-api-client/fast_api_client/models/: __init__.py  body_upload_upload_post.py
3/html/: 8001.html  8002.html  8003.html  8004.html  8005.html  8006.html  8009.html  8010.html  8011.html  8012.html  8013.html  8014.html  8015.html  8018.html  8019.html  8030.html  9000.html
