[project]
name = "fast-api-client"
version = "0.1.0"
description = "A client library for accessing FastAPI"
authors = []
readme = "README.md"
packages = [
    { include = "fast_api_client" },
]
include = ["fast_api_client/py.typed"]
dependencies = [
    "attrs>=26.1.0",
    "httpx>=0.28.1",
    "ipython>=9.15.0",
    "rich>=15.0.0",
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.23.1,<0.29.0"
attrs = ">=22.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
